Fixed size replacement

--- a/tests/index.html
+++ b/tests/index.html
@@ -15,18 +15,22 @@
 
 <h2>Responsive</h2>
 
-<div class="grid gut20">
-    <div class="col perc40">
-        <div class="placeholder1"></div>
-    </div>
-    <div class="col perc60">
-        <div class="placeholder1"></div>
-    </div>
-    <div class="col perc80">
-        <div class="placeholder1"></div>
-    </div>
-    <div class="col perc20">
-        <div class="placeholder1"></div>
+<div class="grid gut20 position-middle">
+    <div class="col perc100">
+        <div class="grid gut20">
+            <div class="col perc40">
+                <div class="placeholder1"></div>
+            </div>
+            <div class="col perc60">
+                <div class="placeholder1"></div>
+            </div>
+            <div class="col perc80">
+                <div class="placeholder1"></div>
+            </div>
+            <div class="col perc20">
+                <div class="placeholder1"></div>
+            </div>
+        </div>
     </div>
 </div>
 
